--- a/css/screen.css
+++ b/css/screen.css
@@ -620,7 +620,21 @@ input:disabled {
 
 /* textarea */
 .c-textarea{
-    
+    display: block;
+    width: 100%;
+    height: 11em;
+}
+
+/* buttons */
+.c-button-terug{
+    display: inline-block;
+    margin: 0 auto;
+    width: 49%;
+}
+.c-button-volgende{
+    display: inline-block;
+    margin: 0 auto;
+    width: 49%;
 }
 
 /*------------------------------------*\
