--- a/css/screen.css
+++ b/css/screen.css
@@ -623,7 +623,7 @@ input:disabled {
 .c-textarea{
     display: block;
     width: 100%;
-    height: 11em;
+    height: 5em;
 }
 
 /* buttons */
@@ -635,10 +635,13 @@ input:disabled {
     background-image: url(/id-labo-examen-2020-remyian/img/svg/arrow-left.svg);
     background-repeat: no-repeat;
     background-position: 0% 50%;
-    /* put the height and width of your image here */
+ 
     height: 50px;
     border: none;
     background-color: white;
+
+    /* text weg werken */
+    font-size: 0;
 }
 
 .c-button-volgende{
@@ -683,6 +686,26 @@ input:disabled {
         --button-active-borderColor: var(--global-color-alpha-dark);
         --button-focus-borderColor: var(--global-color-alpha-x-dark);
     }
+}
+
+/* progressbar  */
+.progress-bar {
+    width: 70%;
+    background-color: #e0e0e0;
+    border-radius: 1em;
+    display: inline-block;
+    margin-right: 3em;
+}
+
+.progress-bar-fill {
+    display: block;
+    height: 0.4em;
+    background-color: var(--global-color-alpha);
+    border-radius: 1em;
+}
+
+.c-text{
+    display: inline-block;
 }
 
 /*------------------------------------*\
