--- a/css/screen.css
+++ b/css/screen.css
@@ -658,7 +658,8 @@ input:disabled {
     display: block;
     width: 100%;
     height: 5em;
-    color: var();
+    background-color: var(--global-color-box);
+    border-color: var(--global-color-text-light);
 }
 
 /* buttons */
@@ -670,10 +671,10 @@ input:disabled {
     background-image: url(/id-labo-examen-2020-remyian/img/svg/arrow-left.svg);
     background-repeat: no-repeat;
     background-position: 0% 50%;
- 
+    
     height: 50px;
     border: none;
-    background-color: white;
+    background-color: var(--global-color-box);
 
     /* text weg werken */
     font-size: 0;
@@ -741,7 +742,7 @@ input:disabled {
 
 .c-text{
     display: inline-block;
-    color: var(--global-color-text);
+    color: var(--global-color-text-light);
 }
 
 
