--- a/css/screen.css
+++ b/css/screen.css
@@ -119,7 +119,7 @@ html {
     font-size: 16px;
     line-height: 1.5;
     font-family: sans-serif;
-    color: Black;
+    color: var(--global-color-text);
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -302,6 +302,9 @@ input:disabled {
         margin-right: auto;
         width: 100%;
     } 
+}
+.o-container-box{
+    background-color: var(--global-color-box);
 }
 
 .o-list {
